--- a/css/styles.css
+++ b/css/styles.css
@@ -21,4 +21,69 @@ img {
 body {
   margin: 0;
   font-family: sans-serif;
+  background-color: #120032;
+  color: white;
+}
+
+h2,
+p {
+  margin: 0;
+}
+
+.page {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+
+.container {
+  height: 50px;
+  width: 500px;
+  background-color: #241441;
+  border-radius: 15px;
+  display: flex;
+  padding: 0 30px;
+}
+
+.container-title {
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.title {
+  font-size: 0.9rem;
+}
+
+.container-slider {
+  justify-content: space-around;
+  align-items: center;
+}
+
+.slider-bar {
+  width: 100%;
+  margin: 0 20px;
+}
+
+.container-option {
+  justify-content: space-between;
+  align-items: center;
+}
+
+.button {
+  height: 50px;
+  width: 300px;
+  color: white;
+  background-color: #a201d4;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.button:disabled {
+  background-color: gray;
+  color: #120032;
 }
